# fbt_ai_voice

./: .gitignore  CMakeLists.txt  README.md  README_EN.md
components/fbt_voice/: CMakeLists.txt  Kconfig
components/fbt_voice/include/modules/: fbt_icon_font.h  fbt_lvgl_button.h  fbt_lvgl_image.h  fbt_lvgl_label.h  fbt_lvgl_progress_bar.h  fbt_simple_dot.h  fbt_touch_device.h  fbt_touch_dispatcher.h  fbt_ui_volume_control.h
components/fbt_voice/include/service/: fbt_audio_repeater.h  fbt_config.h  fbt_constants.h  fbt_event_bus.h  fbt_manager.h  fbt_mcp_service.h
components/fbt_voice/include/transport/: fbt_http.h  fbt_mqtt_server.h  fbt_phone_transport.h  fbt_udp.h  fbt_voice_transport.h
components/fbt_voice/include/ui/: fbt_ui_phone.h  fbt_ui_voice.h
components/fbt_voice/src/fonts/: fbt_icons_18.c  fbt_icons_24.c  fbt_icons_32.c
components/fbt_voice/src/modules/: fbt_lvgl_button.cc  fbt_lvgl_image.cc  fbt_lvgl_label.cc  fbt_lvgl_progress_bar.cc  fbt_touch_device.cc  fbt_touch_dispatcher.cc
components/fbt_voice/src/service/: fbt_audio_repeater.cc  fbt_manager.cc  fbt_mcp_service.cc
components/fbt_voice/src/transport/: fbt_http.cc  fbt_mqtt_server.cc  fbt_phone_transport.cc  fbt_udp.cc  fbt_voice_transport.cc
components/fbt_voice/src/ui/: fbt_ui_phone.cc  fbt_ui_voice.cc  fbt_ui_volume_control.cc
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  assets.cc  device_state.h  mcp_server.cc  mcp_server.h  ota.cc  ota.h
main/audio/: audio_codec.cc  audio_codec.h  audio_service.cc  audio_service.h
main/audio/codecs/: no_audio_codec.cc
main/display/: lcd_display.cc
main/fbt_repeater/: fbt_audio_repeater.cc
main/fbt_service/: fbt_config.h  fbt_constants.h  fbt_manager.cc  fbt_manager.h
main/fbt_transport/: fbt_http.cc  fbt_mqtt_server.cc  fbt_mqtt_server.h  fbt_phone_transport.cc  fbt_phone_transport.h  fbt_voice_transport.cc  fbt_voice_transport.h
main/fbt_utils/: fbt_simple_dot.h
main/led/: single_led.cc
main/protocols/: mqtt_protocol.cc
scripts/ogg_converter/: xiaozhi_ogg_converter.py
(+11 files in other folders)
